--- a/mission.css
+++ b/mission.css
@@ -1,3 +1,12 @@
 .handshake-img {
     max-width: 50%;
 }
+
+
+@media (max-width: 768px) {
+    .handshake-img {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
