--- a/footer.css
+++ b/footer.css
@@ -5,6 +5,7 @@ footer {
     align-items: center;
     padding-top: 5rem;
     padding-bottom: 2rem;
+    gap: 0.5rem;
 }
 
 .socials {
@@ -20,4 +21,9 @@ footer {
 
 .socials a img {
     height: 24px;
+}
+
+footer p {
+    margin: 0;
+    text-align: center;
 }
