--- a/landing.css
+++ b/landing.css
@@ -34,6 +34,7 @@
 /* Upper background part (contains alamak-landing) */
 .landing-background-upper {
     position: relative;
+    height: 65%;
     width: 100%;
     background-color: var(--purple-bg);
     overflow: hidden;
