--- a/footer.css
+++ b/footer.css
@@ -4,6 +4,8 @@ footer {
     align-items: center;
     padding-top: 2rem;
     padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     background-color: #5154A3;
     color: white;
     text-align: center;
@@ -104,7 +106,7 @@ footer a {
 
     .footer-info {
         flex-direction: column;
-        gap: 3rem;
+        gap: 1rem;
     }
 
     .footer-info-group-items {
